==== 2012.5.22 Ver X11 1.71875 beta5 ====
 * LiteFind: add file search
 * PackageBrowser: fast load
 * LiteEditor: LRLF check by \n
 * LiteEditor: no print char conver to .
 * LiteEditor: update tooltip to label
==== 2012.5.16 Ver X11 1.71875 beta4.1 ====
 * LiteBuild: fix execute args for gosrc/gopro/makefile
 * LiteApp: add option - when close project auto close project editors
 * PackageBrowser : double click pkg and load project
 * LiteEditor: add option - compelter case sensitive
==== 2012.5.15 Ver X11 1.71875 beta4 ====
 * GolangPackage : enable local package
 * GolangDoc : golang api fmt#Println -> fmt.Println
 * LiteBuild : fix regexp error
 * FileSystem: (windows) fix rename abc to Abc false
 * PackageProject : remove auto reload timer
 * LiteEditor: (linux) redo enable CTRL+Y
==== 2012.5.2 Ver X11 1.71875 beta3 ===
 * GolangPackage : new golang package plugin for GO1
 * GolangPackage : PackageBrowser and PackageProject for GO1
 * GolangTool : remove the plugin
 * GolangDoc: add golang api for GO1
 * GolangDoc: add golang api filter
 * GolangAst: add filter
 * GolangAst: classview and outline
 * LiteEditor : compelter option
 * LiteApp : new file wizard support GO1
 * Welcome : new recent page
 * gopromake : update pkg depend

==== 2012.3.9 Ver X11 1.71875 beta2 ====
 * GolangPlay : new go playground plugin
 * GolangTool : sync editor, sync project

==== 2012.3.1 Ver X11 1.71875 beta1 ====
 * GolangTool : new golang plugin for GO1, import GOPATH project
 * GolangDoc : update to GO1
 * LiteBuild : update to GO1
 * tools : udpate all tools for GO1

==== 2011.9.26 Ver X10 1.5625 ====
 * LiteEditor : add line mark api
 * LiteDebug : new debug toolbar
 * LiteDebug : insert/remove break
 * LiteDebug : breakpoint and current line mark
 * GdbDebugger : async record view
 * GdbDebugger : variables expand tree
 * GdbDebugger : call stack view
 * GdbDebugger : load library view
 * TerminalEdit : provided to LiteBuild and LiteDebug 
 